Fixed designe on mobile. Use grid to place task-icon. Upgrade 'save' and 'remove' icons look

--- a/src/styles/components/_icon.scss
+++ b/src/styles/components/_icon.scss
@@ -2,8 +2,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    order:-1;
+}
 
+.tasks > .icon{
     @media only screen and (max-width: $screen-lg) {
         display: none;
     }
