--- a/src/styles/layout/_task.scss
+++ b/src/styles/layout/_task.scss
@@ -32,18 +32,14 @@
 
     &__title,
     &__desc{
-        max-width: 110px;
-        min-width: 110px;
+        width: 100%;
 
-        @media only screen and (max-width: $screen-lg) {
-            max-width: 140px;
-            min-width: 140px;
-        }
         /* width */
         &::-webkit-scrollbar {
             position: absolute;
             cursor: pointer;
             width: 10px;
+            height: 10px;
         }
         
         /* Handle */
@@ -55,6 +51,20 @@
         /* Handle on hover */
         &::-webkit-scrollbar-thumb:hover {
             background: #C63E7C; 
+        }
+    }
+
+    &__content{
+        display: flex;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        position: relative;
+        flex-direction: column;
+        max-width: 125px;
+
+        @media only screen and (max-width: $screen-sm) {
+            max-width: 80%;
         }
     }
 
@@ -80,12 +90,36 @@
 
     &__buttons{
         display: flex;
+        width: 100%;
+        justify-content: space-between;
+        margin-top: 2px;
 
         &--remove{
-            background: red;
+            padding: 4px 6px;
+            background: $bg-color;
+            border: #8F5EBE solid 1px;
+            transition: background-color .7s ease-in-out;
+
+            span{
+                color: #8F5EBE;
+            }
+
+            &:hover{
+                background-color: #8F5EBE;
+                span{
+                    color: $bg-color;
+                }
+            }
         }
         &--save{
-            background: green;
+            border: #8F5EBE solid 1px;
+
+            &:hover{
+                background: $bg-color;
+                img{
+                    filter: invert(45%) sepia(9%) saturate(3331%) hue-rotate(228deg) brightness(94%) contrast(89%);
+                }
+            }
         }
         &--remove span,
         &--save span{
